# ilm

./: .dockerignore  .env.example  .env.local  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.turbo/cache/: 027cdd610e1b4fd6-meta.json  027cdd610e1b4fd6.tar.zst  1ca8c75f81e85247-meta.json  1ca8c75f81e85247.tar.zst  1ddf31d887781078-meta.json  1ddf31d887781078.tar.zst  1e6720e8e55cc3e2-meta.json  1e9a152191f6f69c-meta.json  1f89162403cd788f-meta.json  2ca1b8baae65e3f6-meta.json  2ca1b8baae65e3f6.tar.zst  2f5d4e6a90bd31e6-meta.json  2fd35d78557d3106-meta.json  2fd35d78557d3106.tar.zst  3007eee293822165-meta.json  3007eee293822165.tar.zst  33dd5db735cd8af4-meta.json  39285a477478fdba-meta.json  (+42 more)
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_core_schema.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/core/: email.py  jobs.py  notifications.py  rate_limit.py  roles.py  security.py  settings.py  storage.py  tenancy.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/domains/: __init__.py
apps/api/app/domains/admin/: __init__.py  router.py  schemas.py  service.py
apps/api/app/domains/auth/: __init__.py  dependencies.py  google_oidc.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/domains/courses/: __init__.py  repository.py  router.py  schemas.py  service.py
apps/api/app/domains/grading/: ai_provider.py  repository.py  router.py  schemas.py  service.py
apps/api/app/domains/health/: router.py
apps/api/app/domains/notifications/: repository.py  router.py  schemas.py
apps/api/app/domains/onboarding/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/domains/progress/: router.py  schemas.py
apps/api/app/domains/push/: router.py
apps/api/app/domains/storage/: router.py
apps/api/app/domains/students/: models.py  repository.py  router.py  schemas.py
apps/api/ilm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: __init__.py  test_admin_api.py  test_admin_service.py  test_auth_google_api.py  test_auth_login_api.py  test_auth_service.py  test_courses_api.py  test_courses_service.py  test_db_models.py  test_email_service.py  test_google_oidc.py  test_grading_api.py  test_grading_service.py  test_health_api.py  test_jobs_service.py  test_notifications_api.py  test_onboarding_api.py  test_progress_api.py  test_push_api.py  test_storage_api.py  test_students_api.py
tests/: scaffold.test.mjs
(+150 files in other folders)
