[project]
name = "ilm-api"
version = "0.1.0"
description = "FastAPI service for TeacherOS"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.1.3,<5.0.0",
  "cryptography>=44.0.0,<46.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "python-multipart>=0.0.18,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ilm]
story = "2.4"
notes = "Async AI grading job submission and status polling. POST /grading/assignments/{id}/grading-jobs returns 202 with job_id; GET polls status. BackgroundTasks-driven stub AI processing with idempotency gate (artifact→job index). Fail-closed tenant authorization."
