[project]
name = "ilm-api"
version = "0.1.0"
description = "FastAPI service for TeacherOS"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "asyncpg>=0.30.0,<0.32.0",
  "bcrypt>=4.1.3,<5.0.0",
  "boto3>=1.34,<2.0",
  "cryptography>=44.0.0,<46.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.18,<1.0.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ilm]
story = "4.2"
notes = "Local infrastructure with Docker Compose: PostgreSQL, MinIO, FastAPI API+worker services. Provider-agnostic abstractions for S3, email, jobs, push notifications. SQLAlchemy async engine + Alembic migrations scaffold. RBAC audit + tenancy policy docs."
